[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiotrace"
version = "0.1.1"
description = "OpenTelemetry-native async context propagation for asyncio"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "aiotrace contributors" },
]
keywords = ["opentelemetry", "asyncio", "contextvars", "tracing", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
sdk = ["opentelemetry-sdk>=1.20.0"]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-test-utils>=0.40b0",
    "coverage>=7.0",
]
dev = ["aiotrace[test]", "ruff>=0.1", "pyright>=1.1"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["src/aiotrace"]

[tool.pyright]
strict = true
include = ["src/aiotrace"]
